update web and using json data

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -7,7 +7,7 @@
   <link href="{{ url_for('static', filename='css/main.css')}}" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary" data-bs-theme="dark">
+    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="{{url_for('home')}}">AzurLaneDB</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
