--- a/web/templates/personajes.html
+++ b/web/templates/personajes.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Personajes</h1>
-    <table border="1px solid white">
+    <table id="dataTable" class="table table-dark table-striped table-hover table-bordered">
         <thead>
             <tr>
                 <th>Nombre</th>
@@ -10,7 +10,7 @@
                 <th>Tier</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
             {% for tipo in jsonData['AzurLane'] %}
                 {% set clase = tipo['clase'] %}
                 {% set barcos = tipo['barcos'] %}
@@ -24,5 +24,4 @@
             {% endfor %}
         </tbody>
     </table>
-    <h2>{{ jsonData['AzurLane'][0]['clase'] }}</h2>
 {% endblock %}
