add page for marriadge skins

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -19,6 +19,9 @@
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="{{url_for('personajes')}}">Personajes</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{{url_for('marriage')}}">Casar</a>
+              </li>
               <!--
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="{{url_for('home')}}">Home</a>
